# mbms

./: .gitignore  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  Schema.sql  TagExtractor.cpp  TagExtractor.h  go.mod  go.sum  importer.go  mbms.cc  mbms.cpp  mbms.go  mbms_test.go  readme.md  types.go
controllers/: DefaultController.cc  DefaultController.h
static/: allArtist.html  allRelease.html  allTrack.html  artist-item.html  artist.html  dragTrack.html  edit-list.html  head.html  list.html  nav.html  player.html  playlist-item.html  playlist-selector-item.html  release-item.html  release.html  script.js  smallRelease.html  smallTrack.html  style.css  track-item.html  track.html
templates/: artist-li.html  artist-link.html  artist.html  base.html  playlist-chooser-li.html  playlist-item.html  playlist-li.html  playlist.html  playlists.html  release-li.html  release.html  search.html  track-li.html  track.json
util/: CMakeLists.txt  CreateTables.sql  DatabaseManager.cpp  DatabaseManager.h  Schema.sql  TagExtractor.cpp  TagExtractor.h  Types.h  generate_db.cpp  main.cpp  makefile  mbms.sqlite
