CMAKE_MINIMUM_REQUIRED(VERSION 3.25.1)
set(CMAKE_BUILD_TYPE Debug)

PROJECT(mbms)
FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(SQLite3 REQUIRED)
FIND_PACKAGE(oatpp REQUIRED)
PKG_CHECK_MODULES(Taglib REQUIRED)
PKG_CHECK_MODULES(CURL REQUIRED)
PKG_CHECK_MODULES(MusicBrainz5 REQUIRED)
ADD_EXECUTABLE(${PROJECT_NAME} mbms.cpp)
ADD_LIBRARY(DatabaseManager SHARED DatabaseManager.cpp)
ADD_LIBRARY(TagExtractor SHARED TagExtractor.cpp)
TARGET_INCLUDE_DIRECTORIES(
    DatabaseManager
    PUBLIC
    .
    ${MusicBrainz5_INCLUDE_DIRS}
    ${SQLite3_INCLUDE_DIRS}
)
TARGET_INCLUDE_DIRECTORIES(
    TagExtractor
    PUBLIC
    .
    ${Taglib_INCLUDE_DIRS}
    ${CURL_INCLUDE_DIRS}
)
TARGET_INCLUDE_DIRECTORIES(
    ${PROJECT_NAME}
    PUBLIC
    .
    ${Mongoose_INCLUDE_DIRS}
)
TARGET_LINK_LIBRARIES(
    DatabaseManager
    LINK_PUBLIC
    sqlite3
    musicbrainz5
)
TARGET_LINK_LIBRARIES(
    TagExtractor
    LINK_PUBLIC
    DatabaseManager
    curl
    tag
)
TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
    DatabaseManager
    TagExtractor
    oatpp
)
