CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(mbms CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

ADD_EXECUTABLE(${PROJECT_NAME} mbms.cc)

FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(SQLite3 REQUIRED)
FIND_PACKAGE(Drogon CONFIG REQUIRED)
PKG_CHECK_MODULES(Taglib REQUIRED)
PKG_CHECK_MODULES(CURL REQUIRED)
PKG_CHECK_MODULES(MusicBrainz5 REQUIRED)
ADD_LIBRARY(DatabaseManager SHARED DatabaseManager.cpp)
ADD_LIBRARY(TagExtractor SHARED TagExtractor.cpp)
aux_source_directory(controllers CTL_SRC)

TARGET_INCLUDE_DIRECTORIES(
    DatabaseManager
    PUBLIC
    .
    ${MusicBrainz5_INCLUDE_DIRS}
    ${SQLite3_INCLUDE_DIRS}
)
TARGET_INCLUDE_DIRECTORIES(
    TagExtractor
    PUBLIC
    .
    ${Taglib_INCLUDE_DIRS}
    ${CURL_INCLUDE_DIRS}
)
TARGET_INCLUDE_DIRECTORIES(
    ${PROJECT_NAME}
    PUBLIC
    .
)
TARGET_SOURCES(
    ${PROJECT_NAME}
    PRIVATE
    ${SRC_DIR}
    ${CTL_SRC}
)
TARGET_LINK_LIBRARIES(
    DatabaseManager
    LINK_PUBLIC
    sqlite3
    musicbrainz5
)
TARGET_LINK_LIBRARIES(
    TagExtractor
    LINK_PUBLIC
    DatabaseManager
    curl
    tag
)
TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
    PRIVATE
    DatabaseManager
    TagExtractor
    Drogon::Drogon
)
set_property(TARGET ${PROJECT_NAME} PROPERTY ENABLE_EXPORTS ON)
